--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Impactful Octo HTML</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Impactful Octo HTML</h1>
